fix bio modal on mobile

--- a/src/styles/WhoWeAreProfiles.scss
+++ b/src/styles/WhoWeAreProfiles.scss
@@ -88,6 +88,11 @@
 .WhoWeAreProfiles__descriptionBlock--inner {
     padding: 40px;
     background-color: $bg-gray-transparent;
+
+    @media (max-width: 700px) {
+        height: 100vh;
+        padding: 20px
+    }
 }
 
 .WhoWeAreProfiles__closeIcon {
@@ -108,13 +113,27 @@
 .WhoWeAreProfiles__selectedProfileBlock {
     display: flex;
     max-height: 500px;
+
+    @media (max-width: 700px) {
+        flex-direction: column;
+        max-height: 80vh;
+    }
 }
 
 .WhoWeAreProfiles__selectedProfileImage {
     filter: grayscale(100%);
-    width: 250px;
-    height: 300px;
+    min-width: 250px;
+    min-height: 300px;
     margin-right: 30px;
+
+    @media (max-width: 700px) {
+        width: 166px !important;
+        height: 200px !important;
+        min-width: 166px;
+        min-height: 200px;
+        margin-right: 0;
+        margin-bottom: 16px;
+    }
 }
 
 .WhoWeAreProfiles__selectedProfileName {
@@ -129,6 +148,11 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+
+    @media (max-width: 700px) {
+        flex-direction: column;
+        max-height: 80vh;
+    }
 }
 
 .WhoWeAreProfiles__description {
